--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing orders</h1>
+<title>Listing orders</title>
 
 <table>
   <tr>
@@ -30,8 +30,6 @@
     <td><%= order.number_of_passengers %></td>
     <td><%= order.driver %></td>
     <td><%= link_to 'Show', order %></td>
-    <td><%= link_to 'Edit', edit_order_path(order) %></td>
-    <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
