--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,6 +1,9 @@
 <title>Listing Customers</title>
 
-<table>
+<div class ="span12 offset1">
+    <h1>Listing Customers</h1>
+<div class ="well">
+<table class="table table-bordered table-striped">
   <tr>
    
 	<th>Customer Name</th>
@@ -27,3 +30,5 @@
 <br />
 
 <%= link_to 'New Customer', new_customer_path %>
+</div>
+</div>
