--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,10 @@
+
 <title>New customer</title>
+<div class ="span12 offset1">
 <h2> New Customer </h2>
+</div>
 <%= render 'form' %>
 
+<div class ="span12 offset1">
  <%= link_to 'Back', orders_path %>
+</div>
