--- a/app/views/navigation/index.html.erb
+++ b/app/views/navigation/index.html.erb
@@ -1,3 +1,9 @@
 <title>Home</title>
-<p>Find me in app/views/navigation/index.html.erb</p>
- <%= link_to "Bookings", new_order_path %>
+<div class ="span8 offset3">
+	<div class = "well">
+<h2><p> A pioneer in shaping the personal ground transportation in Qatar, offering end-to-end long and short term car rental solutions with and without a driver to cover the entire 11,571 km2. 
+</br>
+</br>
+Sign in, book a car, and go… " </p></h2>
+<div>
+</div>
