--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,3 +1,5 @@
+<div class ="span12 offset1">
+<div class ="well">
 <%= form_for(@order) do |f| %>
   <% if @order.errors.any? %>
     <div id="error_explanation">
@@ -11,48 +13,50 @@
     </div>
   <% end %>
 
+<div class="offset1">
   <div class="field">
-   <%= f.label :customer_id %><br />
+   <%= f.label :customer_id %>
     <%= f.number_field :customer_id %>
 
   </div>
   <div class="field">
-    <%= f.label :vehicle_id %><br />
+    <%= f.label :vehicle_id %>
     <%= f.number_field :vehicle_id %>
   </div>
   <div class="field">
-    <%= f.label :order_time %><br />
+    <%= f.label :order_time %>
     <%= f.time_select :order_time %>
   </div>
   <div class="field">
-    <%= f.label :order_date %><br />
+    <%= f.label :order_date %>
     <%= f.date_select :order_date %>
   </div>
   <div class="field">
-    <%= f.label :pickup_time %><br />
+    <%= f.label :pickup_time %>
     <%= f.time_select :pickup_time %>
   </div>
   <div class="field">
-    <%= f.label :pickup_date %><br />
+    <%= f.label :pickup_date %>
     <%= f.date_select :pickup_date %>
   </div>
   <div class="field">
-    <%= f.label :pickup_address %><br />
+    <%= f.label :pickup_address %>
     <%= f.text_field :pickup_address %>
   </div>
   <div class="field">
-    <%= f.label :destination %><br />
+    <%= f.label :destination %>
     <%= f.text_field :destination %>
   </div>
   <div class="field">
-    <%= f.label :number_of_passengers %><br />
+    <%= f.label :number_of_passengers %>
     <%= f.number_field :number_of_passengers %>
   </div>
   <div class="field">
-    <%= f.label :driver %><br />
+    <%= f.label :driver %>
     <%= f.check_box :driver %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+</div></div></div></div>
