--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
+<div class ="span12 offset1">
+<div class ="well">
 <h1>Sign Up</h1>
 
+<div class="offset1">
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -25,3 +28,4 @@
   </div>
   <div class="actions"><%= f.submit %></div>
 <% end %>
+</div></div></div></div>
