--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -17,27 +17,27 @@
   
 <div class="offset1">
   <div class="field">
-    <%= f.label :make %><br />
+    <%= f.label :make %>
     <%= f.text_field :make %>
   </div>
   <div class="field">
-    <%= f.label :model %><br />
+    <%= f.label :model %>
     <%= f.text_field :model %>
   </div>
   <div class="field">
-    <%= f.label :color %><br />
+    <%= f.label :color %>
     <%= f.text_field :color %>
   </div>
   <div class="field">
-    <%= f.label :license_plate %><br />
+    <%= f.label :license_plate %>
     <%= f.number_field :license_plate %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-      <%= f.label :image %><br />
+      <%= f.label :image %>
       <%= f.file_field :image %>
    </div>
   <div class="actions">
