--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,8 @@
+<div class ="span12 offset1">
 <title>>Editing customer</title>
-
+</div>
 <%= render 'form' %>
-
+<div class ="span12 offset1">
 <%= link_to 'Show', @customer %> |
 <%= link_to 'Back', customers_path %>
+</div>
