--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
+<div class="container">
 <head>
   <title>TransportationProject3</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= render 'partials/header'%> 
 </head>
+
 <body>
 
 <%= yield %>
 
 </body>
 </html>
+</div>
