--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,6 +1,9 @@
+<div class ="span12 offset1">
 <h1>Editing order</h1>
-
+</div>
 <%= render 'form' %>
 
+<div class ="span12 offset1">
 <%= link_to 'Show', @order %> |
 <%= link_to 'Back', orders_path %>
+</div>
