--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,7 @@
+<div class ="span12 offset1">
 <h1>New order</h1>
-
+</div>
 <%= render 'form' %>
-
+<div class ="span12 offset1">
 <%= link_to 'Back', orders_path %>
+</div>
